--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="faq.html">FAQs</a></li>
-                                <li><a href="login.html">Login</a></li>
+                                <li><a href="{{ route('login') }}">Login</a></li>
                             
                             </ul>
                             <div class="nav-right">
@@ -379,7 +379,7 @@
                                     <div class="widget footer-widget">
                                         <span class="widget-title text-uppercase">Quick links</span>
                                         <ul class="footer-menu">
-                                            <li><a href="login.html">Login</a></li>
+                                            <li><a href="{{ route('login') }}">Login</a></li>
                                             <li><a href="register.html">Sign Up</a></li>
                                             <li><a href="pricing.html">Pricing</a></li>
                                         </ul>
