--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="faq.html">FAQs</a></li>
-                                <li><a href="{{ route('login') }}">Login</a></li>
+                                <li><a href="login.html">Login</a></li>
                             
                             </ul>
                             <div class="nav-right">
-                                <a href="{{ route('refer.register') }}" class="nav-btn">Join us</a>
+                                <a href="register.html" class="nav-btn">Join us</a>
                             </div>
                         </div>
                     </nav>
@@ -77,7 +77,7 @@
                             <p class="description wow soneFadeUp text-dark" data-wow-delay="0.6s">
                             Crystal Group Assets platform is at your service with its user-friendly features, secure infrastructure and applications that make a difference.
                             </p>
-                            <a class="btn btn-sm btn-soft-primary btn-pill" href="{{ route('refer.register') }}">Get Started<i class="fas fa-angle-right ml-1"></i></a>
+                            <a class="btn btn-sm btn-soft-primary btn-pill" href="register.html">Get Started<i class="fas fa-angle-right ml-1"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6 d-none d-lg-block">
